--- a/server/views/app.pug
+++ b/server/views/app.pug
@@ -2,13 +2,14 @@ extends _layout
 
 block style
   link(rel='stylesheet', type='text/css', href=`/assets/css/${name}.css`)
+  script(type='text/javascript', src=`https://kit.fontawesome.com/e26bc99bde.js`, crossorigin='anonymous')
 
 block title
-  title Observe2ch - #{name.charAt(0).toLocaleUpperCase() + name.slice(1)}
+  title Health meter - #{name.charAt(0).toLocaleUpperCase() + name.slice(1)}
 
 block body
   #app-common
   #app-main
-  script(type='text/javascript') window[#{name}] = !{name}
+  script(type='text/javascript') window[`${name}`] = !{name}
   script(type='text/javascript', src='/assets/js/vendor.js')
   script(type='text/javascript', src=`/assets/js/${name}.js`)
