--- a/src/styles/commons/variables.css
+++ b/src/styles/commons/variables.css
@@ -1,4 +1,5 @@
 :root {
+  --color-main: #39c9d8;
   --color-select: #65b3c1;
   --color-select-shadow: color(var(--color-select) alpha(70%));
   --color-select-bg: color(var(--color-select) alpha(-24%));
@@ -19,7 +20,7 @@
   --duration-quick: calc(var(--duration) * 0.5);
   --duration-middle: calc(var(--duration) * 1);
   --duration-slow: calc(var(--duration) * 2);
-  --easing-in-out-back: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  --easing-in-out-back: cubic-bezier(0.68, 0, 0.265, 1.55);
 }
 
 @custom-media --screen-mobile (width <= 480px);
