--- a/src/styles/commons/layouts/header.css
+++ b/src/styles/commons/layouts/header.css
@@ -1,28 +1,28 @@
 @import "../variables.css";
 
-main {
-  & > header {
-    background: var(--color-main);
+.global-header {
+  background: var(--color-main);
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 8px;
+  padding: 8px 12px;
+  z-index: 8000;
+
+  & h1 {
+    margin: 0;
+    font-size: 1.5em;
+  }
+
+  & .user--icon {
+    border-radius: 50%;
+    display: block;
+    height: 36px;
+    width: 36px;
+  }
+
+  & .user--login {
+    display: block;
     color: #fff;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 8px;
-    padding: 8px 12px;
-    z-index: 8000;
-
-    & h1 {
-      margin: 0;
-    }
-
-    & .user--icon {
-      border-radius: 50%;
-      display: block;
-      height: 36px;
-      width: 36px;
-    }
-
-    & .user--login {
-      display: block;
-    }
   }
 }
