--- a/src/styles/commons/reset.css
+++ b/src/styles/commons/reset.css
@@ -3,6 +3,7 @@ body {
   font-family: "ヒラギノ角ゴシック Pro", "Hiragino Kaku Gothic Pro", メイリオ, Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
   height: 100%;
   margin: 0;
+  touch-action: manipulation;
 }
 
 h1,
@@ -32,4 +33,8 @@ button {
 input[type="checkbox"],
 input[type="radio"] {
   display: none;
+}
+
+* {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
