--- a/src/styles/pages/app.css
+++ b/src/styles/pages/app.css
@@ -155,4 +155,22 @@ main {
       margin: 4px;
     }
   }
+
+  & select {
+    -webkit-appearance: none;
+    background: #fff;
+    border: 3px solid #aaa;
+    border-radius: var(--radius-small);
+    height: 2em;
+    margin: 3px;
+    outline: none;
+    text-align: right;
+    width: 2.2em;
+
+    &:focus {
+      border-color: var(--color-select);
+      box-shadow: 0 0 6px 6px var(--color-select-shadow);
+      color: var(--color-select);
+    }
+  }
 }
