--- a/src/styles/commons/layouts/header.css
+++ b/src/styles/commons/layouts/header.css
@@ -1,13 +1,15 @@
 @import "../variables.css";
 
 .global-header {
+  position: fixed;
   background: var(--color-main);
   color: #fff;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 8px;
   padding: 8px 12px;
   z-index: 8000;
+  width: 101vw;
+  top: 0;
 
   & h1 {
     margin: 0;
