--- a/src/styles/pages/calendar.css
+++ b/src/styles/pages/calendar.css
@@ -1,19 +1,92 @@
 .calendar {
   width: 100%;
+  & tbody {
+    border-top: 1px solid #ddd;
+    border-left: 1px solid #ddd;
+  }
 }
 
+.calendar--page-button {
+  position: fixed;
+  display: flex;
+  justify-content: space-between;
+  bottom: 0;
+  width: 100vw;
+  padding: 24px;
+
+  & button {
+    display: block;
+    background: #fff;
+    border: 2px solid var(--color-main);
+    border-radius: 50%;
+    color: var(--color-main);
+    width: 2rem;
+    height: 2rem;
+    z-index: 1000;
+  }
+}
+
+.calendar--day {
+  &:first-child {
+    color: #d66;
+  }
+  &:last-child {
+    color: #26d;
+  }
+}
 .calendar--week {
-  margin: 0;
-  padding: 0;
-  border-bottom: 1px solid #aaa;
+  border-bottom: 1px solid #ddd;
 }
 
 .calendar--date {
   vertical-align: top;
-  font-size: 0.5rem;
-  height: 8vh;
-  width: 8vw;
-  margin: 0;
-  padding: 0;
-  border-right: 1px solid #aaa;
+  font-size: 0.6rem;
+  height: 15vw;
+  width: 10vw;
+  border-right: 1px solid #ddd;
+
+  & .container {
+    & .top {
+      position: relative;
+      margin-bottom: 4px;
+      & .date {
+        margin: 3px;
+      }
+      & i {
+        position: absolute;
+        display: block;
+        right: 2px;
+        top: 2px;
+        font-size: 1rem;
+      }
+    }
+    & .bottom {
+      padding: 2px;
+      display: flex;
+      justify-content: flex-start;
+      flex-wrap: wrap;
+    }
+  }
+
+  & .fa-dizzy {color: #4b6fdb}
+  & .fa-frown {color: #6da0e9}
+  & .fa-meh {color: #5be38a}
+  & .fa-smile {color: #f0ba72}
+  & .fa-grin-stars {color: #f05768}
+}
+
+.calendar--weather {
+  display: inline-block;
+  background: var(--color-main-light);
+  border-radius: 50%;
+  height: 1rem;
+  width: 1rem;
+  line-height: 1rem;
+  text-align: center;
+
+  & .fa-sun {color: #ff944c}
+  & .fa-cloud {color: #fff}
+  & .fa-umbrella {color: #4184e2}
+  & .fa-bolt {color: #f0ba72}
+  & .fa-snowflake {color: #bae3ff}
 }
