--- a/src/styles/pages/app.css
+++ b/src/styles/pages/app.css
@@ -109,7 +109,7 @@ main {
   }
 }
 
-.question.meals {
+.question.count {
   & span {
     display: block;
     font-size: 36px;
@@ -176,6 +176,100 @@ main {
       border-color: var(--color-select);
       box-shadow: 0 0 6px 6px var(--color-select-shadow);
       color: var(--color-select);
+    }
+  }
+}
+
+.question-count--wrapper {
+  position: relative;
+}
+
+.question--config {
+  position: absolute;
+  display: block;
+  background: #fff;
+  border: 2px solid var(--color-main);
+  border-radius: 50%;
+  color: var(--color-main);
+  width: 2rem;
+  height: 2rem;
+  font-size: 1rem;
+  top: 44px;
+  right: 16px;
+}
+
+.modal.edit--count {
+  & header {
+    background: var(--color-green);
+    color: #fff;
+    padding: 6px;
+    text-align: left;
+
+    & h1 {
+      margin: 0 0.25em;
+    }
+  }
+
+  & footer {
+    background: #fff;
+    border-top: 1px solid var(--color-gray);
+    padding: 6px;
+    text-align: left;
+    display: flex;
+    justify-content: flex-end;
+
+    & button {
+      font-weight: bold;
+      letter-spacing: 0.2em;
+      margin: 0 6px;
+      padding: 8px 12px;
+      border-radius: 2rem;
+      display: block;
+
+      &.cancel {
+        background: #fff;
+        border: 1px solid var(--color-green);
+        color: var(--color-green);
+      }
+      &.save {
+        background: var(--color-green);
+        color: #fff;
+      }
+    }
+  }
+
+  & .counter--add,
+  & .counter-list button {
+    background: #fff;
+    border: 2px solid #444;
+    border-radius: 50%;
+    color: #444;
+    width: 2rem;
+    height: 2rem;
+    top: 44px;
+    right: 16px;
+  }
+
+  & .counter-list {
+
+    & > li {
+      display: flex;
+      padding: 8px;
+      border-bottom: 1px solid #ccc;
+      & > * {
+        display: block;
+        margin: 0 4px;
+      }
+    }
+
+    & span {
+      margin-right: auto;
+      line-height: 2rem;
+    }
+
+    & .counter--remove {
+      border-color: var(--color-alert);
+      color: var(--color-alert);
     }
   }
 }
