--- a/src/styles/commons/layouts/navigation.css
+++ b/src/styles/commons/layouts/navigation.css
@@ -8,7 +8,7 @@
 .navigation-toggle {
   background: var(--color-main);
   border-radius: 50%;
-  box-shadow: 0 0 10px 0 #aaa;
+  box-shadow: var(--shadow);
   color: #fff;
   font-size: calc(var(--toggle-button-size) / 2);
   line-height: var(--toggle-button-size);
@@ -35,7 +35,7 @@
       background: #fff;
       border: 3px solid var(--color-main);
       border-radius: 50%;
-      box-shadow: 0 0 10px 0 #aaa;
+      box-shadow: var(--shadow);
       font-size: calc(var(--menu-button-size) / 2);
       line-height: var(--menu-button-size);
       height: var(--menu-button-size);
